tests/samples/invalid/reserved_keyword_as_declaration_identifier.pn
const i8 = "i8";

fn i128()
{
	var ok = true;
}

struct void
{
	x: i32,
}

struct Foo
{
	bool: i32,
}

extern fn confused_with_c(i32 a);
